--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <p style="color:red">IMPORTANT! - You Must Be An Adult 18+ To Use This Website. If You Are NOT An Adult 18+ Please Exit This Website Immediately!</p>
   
   
-  <p style="color:red"><h4>This Website Is Strictly For Educatinal Purposes Only. </h4> </p>
+  <p style="color:red"><h4>This Website Is Strictly For Educatinal Purposes Only! This Website Is About Ethical Hacking.</h4> </p>
   <p style="color:red">By Engaging This Website, You Agree, That You Hold Full Responsiblity For What You May Do With The Information Or Software You May Obtain From This Website.
   You Agree, That You Are, Soley Responsible For Protecting Yourself From Software That May Harm Your Computer. 
   You Agree, That I, The Site Owner Of https://theoryfreak.com/ Am NOT Responsible For Any Harm Or Adverse Events you May Experence Using This Website Or Any Software You May Obtain By Using This Website.
@@ -37,11 +37,9 @@
   
 <button type="button" onclick=""> MarketPlace </button>
   
+<button type="button" onclick=""> Freebies & Give Aways! </button>
+  
 <button type="button" onclick=""> Scammers! </button>
-
-<button type="button" onclick=""> Freebies & More! </button>
-
-<button type="button" onclick=""> Pinned Post! </button>
   
 <button type="button" onclick=""> General Tutorials </button>
   
@@ -57,17 +55,15 @@
 
 <button type="button" onclick=""> Photos </button>
   
-<button type="button" onclick=""> Funny Memes </button>
+<button type="button" onclick=""> Memes </button>
   
-<button type="button" onclick=""> Ask/Answer Questions! </button>
+<button type="button" onclick=""> Ask/Answer Hacker Questions! </button>
 
 <button type="button" onclick=""> Forex Market </button>
 
 <button type="button" onclick=""> Science </button>
   
-<button type="button" onclick=""> Most Epic! </button>
-  
-<button type="button" onclick=""> Math </button>
+  <button type="button" onclick=""> Math </button>
   
 <button type="button" onclick=""> Statistics </button>
   
@@ -86,18 +82,20 @@
 <button type="button" onclick=""> 9/11 Theory </button>
 
 <button type="button" onclick=""> Drugs </button>
+  
+<button type="button" onclick=""> Most Epic! </button>
 
 <button type="button" onclick=""> Pills </button>
 
-<button type="button" onclick=""> psychodelics </button>
+<button type="button" onclick=""> Psychodelics </button>
   
 <button type="button" onclick=""> Gambling </button>
   
 <button type="button" onclick=""> Religion </button>
 
-<button type="button" onclick="">⚰️ Obituary</button>
+<button type="button" onclick=""> Obituary </button>
   
-<button type="button" onclick="">✉️ Email Me</button>
+<button type="button" onclick=""> Contact Me </button>
 
 <button type="button" onclick="Chat()">Chat With Hackers</button>
 <button type="button" onclick="GoogleDorks()">Google Dorks</button>
