--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   I Do NOT Own, Endorse, Nor Guarntee In Any Way, Any Product, Service, Tutorial, Or Material, That You May Find By Using This Website, Unless Otherwise Stated. </p>
   
   
-  <p style="color:blue">I am currently making updates to the website. Most of the website will not function as I am making these updates. 
+  <p>I am currently making updates to the website. Most of the website will not function as I am making these updates. 
     Please bookmark this website and visit back soon.
     I will be hosting some of my own programs that until recently would have needed a subscription. My programs will only be available to download from https://TheoryFreak.com.
     If you discover any of my programs hosted else where, Please be advised to use extreme cation and not trust outside sources as they may contain malware. 
@@ -101,6 +101,17 @@
 <button type="button" onclick="GoogleDorks()">Google Dorks</button>
 <button type="button" onclick="CommonWords()">Common Words List</button>
   <p> </p>
+  
+    <p>I am currently making updates to the website. Most of the website will not function as I am making these updates. 
+    Please bookmark this website and visit back soon.
+    I will be hosting some of my own programs that until recently would have needed a subscription. My programs will only be available to download from https://TheoryFreak.com.
+    If you discover any of my programs hosted else where, Please be advised to use extreme cation and not trust outside sources as they may contain malware. 
+    I will be hosting some great hacking tools, tutorials, including video & pdf tutorials. I will be hosting word tools and word list. There will be a chat room for hackers to communicate there knowledge.
+    Please, always be mindful of other members. Always treat one another like you would want to be treated. I created this website to serve as a safe haven for the hacker community.
+    This website shall serve as an online portal Of valuable information that shall be open to all hackers and hackers alike. I will try my best to implement a way to share content between one another.
+    If anyone, has any questions, comments, or concerns, please don't hesitate to email me at theoryfreak@yahoo.com My facebook page is https://facebook.com/TheoryFreak</p>
+  
+  
 <div id="theoryfreak"></div>
 
 
