--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
  <p style="color:red">IMPORTANT! - You Must Be An Adult 18+ To Use This Website. If You Are NOT An Adult 18+ Please Exit This Website Immediately!</p>
   
   
-  <p style="color:red"><h4>This Website Is Strictly For Educatinal Purposes Only! This Website Is About Ethical Hacking.</h4> </p>
+  <p style="color:red"><h4> This Website Is Strictly For Educatinal Purposes Only! </h4></p>
+  <p> This Website Is About Ethical Hacking. </p>
   <p style="color:red">By Engaging This Website, You Agree, That You Hold Full Responsiblity For What You May Do With The Information Or Software You May Obtain From This Website.
   You Agree, That You Are, Soley Responsible For Protecting Yourself From Software That May Harm Your Computer. 
   You Agree, That I, The Site Owner Of https://theoryfreak.com/ Am NOT Responsible For Any Harm Or Adverse Events you May Experence Using This Website Or Any Software You May Obtain By Using This Website.
