--- a/index.html
+++ b/index.html
@@ -20,77 +20,42 @@
   I Do NOT Own, Endorse, Nor Guarntee In Any Way, Any Product, Service, Tutorial, Or Material, That You May Find By Using This Website, Unless Otherwise Stated. </p>
   
  
-<button type="button" onclick=""> Home </button>
-  
+<button type="button" onclick="/index.html"> Home </button>
 <button type="button" onclick=""> Chat </button>
-  
 <button type="button" onclick=""> Downloads </button>
-  
 <button type="button" onclick=""> MarketPlace </button>
-  
 <button type="button" onclick=""> Freebies & Give Aways! </button>
-  
 <button type="button" onclick=""> Scammers! </button>
-  
 <button type="button" onclick=""> General Tutorials </button>
-  
 <button type="button" onclick=""> Video Tutorials </button>
-
 <button type="button" onclick=""> Pdf Tutorials </button>
-  
+<button type="button" onclick=""> Other Tutorials </button>
 <button type="button" onclick=""> Word Lists </button>
-  
 <button type="button" onclick=""> Videos </button>
-  
 <button type="button" onclick=""> Music </button>
-
 <button type="button" onclick=""> Photos </button>
-  
 <button type="button" onclick=""> Memes </button>
-  
 <button type="button" onclick=""> Ask/Answer Hacker Questions! </button>
-
 <button type="button" onclick=""> Forex Market </button>
-
-<button type="button" onclick=""> Science </button>
-  
-  <button type="button" onclick=""> Math </button>
-  
-<button type="button" onclick=""> Statistics </button>
-  
-<button type="button" onclick=""> Space Time </button>
-  
-<button type="button" onclick=""> Extraterritorial </button>
-
 <button type="button" onclick=""> Psychology </button>
-
-<button type="button" onclick=""> Body Building </button>
-
-<button type="button" onclick=""> Romance </button>
-  
-<button type="button" onclick=""> Recycling </button>
-
+<button type="button" onclick=""> Science </button>
+<button type="button" onclick=""> Math & Statistics</button>
+<button type="button" onclick=""> Space Time Theory</button>
 <button type="button" onclick=""> 9/11 Theory </button>
-
+<button type="button" onclick=""> Extraterritorial </button>
+<button type="button" onclick=""> Recycling </button>
+<button type="button" onclick=""> Body Building </button>
 <button type="button" onclick=""> Drugs </button>
-  
-<button type="button" onclick=""> Most Epic! </button>
-
 <button type="button" onclick=""> Pills </button>
-
 <button type="button" onclick=""> Psychodelics </button>
-  
 <button type="button" onclick=""> Gambling </button>
-  
+  <button type="button" onclick=""> Most Epic! </button>
 <button type="button" onclick=""> Religion </button>
-
 <button type="button" onclick=""> Obituary </button>
-  
 <button type="button" onclick=""> Contact Me </button>
-
-<button type="button" onclick="Chat()">Chat With Hackers</button>
-<button type="button" onclick="GoogleDorks()">Google Dorks</button>
-<button type="button" onclick="CommonWords()">Common Words List</button>
+<button type="button" onclick="Chat()"> TEST - Chat With Hackers</button>
+<button type="button" onclick="GoogleDorks()">TEST - Google Dorks</button>
+<button type="button" onclick="CommonWords()">TEST - Common Words List</button>
   <p> </p>
   
     <div id="theoryfreak"><p>I am currently making updates to the website. Most of the website will not function as I am making these updates. 
