--- a/index.html
+++ b/index.html
@@ -7,65 +7,20 @@
 
 <body>
   
-<h1>Welcome, Hackers!</h1>
+<h1>Welcome, You!</h1>
  
- <p style="color:red">IMPORTANT! - You Must Be An Adult 18+ To Use This Website. If You Are NOT An Adult 18+ Please Exit This Website Immediately!</p>
+ <p style="color:red">Anthony Sees You!</p>
   
   
-  <p style="color:red"><h4> This Website Is Strictly For Educatinal Purposes Only! </h4></p>
-  <p> This Website Is About Ethical Hacking. </p>
-  <p style="color:red">By Engaging This Website, You Agree, That You Hold Full Responsiblity For What You May Do With The Information Or Software You May Obtain From This Website.
-  You Agree, That You Are, Soley Responsible For Protecting Yourself From Software That May Harm Your Computer. 
-  You Agree, That I, The Site Owner Of https://theoryfreak.com/ Am NOT Responsible For Any Harm Or Adverse Events you May Experence Using This Website Or Any Software You May Obtain By Using This Website.
-  I Do NOT Own, Endorse, Nor Guarntee In Any Way, Any Product, Service, Tutorial, Or Material, That You May Find By Using This Website, Unless Otherwise Stated. </p>
+  <p style="color:red"><h4> Stay Groovy Folks! We Are Under Construction! - We'll Be Back Very Soon! </p>
   
  
 <button type="button" onclick="/index.html"> Home </button>
-<button type="button" onclick=""> Chat </button>
-<button type="button" onclick=""> Downloads </button>
-<button type="button" onclick=""> MarketPlace </button>
-<button type="button" onclick=""> Freebies & Give Aways! </button>
-<button type="button" onclick=""> Scammers! </button>
-<button type="button" onclick=""> General Tutorials </button>
-<button type="button" onclick=""> Video Tutorials </button>
-<button type="button" onclick=""> Pdf Tutorials </button>
-<button type="button" onclick=""> Other Tutorials </button>
-<button type="button" onclick=""> Word Lists </button>
-<button type="button" onclick=""> Videos </button>
-<button type="button" onclick=""> Music </button>
-<button type="button" onclick=""> Photos </button>
-<button type="button" onclick=""> Memes </button>
-<button type="button" onclick=""> Ask/Answer Hacker Questions! </button>
-<button type="button" onclick=""> Forex Market </button>
-<button type="button" onclick=""> Psychology </button>
-<button type="button" onclick=""> Science </button>
-<button type="button" onclick=""> Math & Statistics</button>
-<button type="button" onclick=""> Space Time Theory</button>
-<button type="button" onclick=""> 9/11 Theory </button>
-<button type="button" onclick=""> Extraterritorial </button>
-<button type="button" onclick=""> Recycling </button>
-<button type="button" onclick=""> Body Building </button>
-<button type="button" onclick=""> Drugs </button>
-<button type="button" onclick=""> Pills </button>
-<button type="button" onclick=""> Psychodelics </button>
-<button type="button" onclick=""> Gambling </button>
-  <button type="button" onclick=""> Most Epic! </button>
-<button type="button" onclick=""> Religion </button>
-<button type="button" onclick=""> Obituary </button>
-<button type="button" onclick=""> Contact Me </button>
-<button type="button" onclick="Chat()"> TEST - Chat With Hackers</button>
 <button type="button" onclick="GoogleDorks()">TEST - Google Dorks</button>
 <button type="button" onclick="CommonWords()">TEST - Common Words List</button>
   <p> </p>
   
-    <div id="theoryfreak"><p>I am currently making updates to the website. Most of the website will not function as I am making these updates. 
-    Please bookmark this website and visit back soon.
-    I will be hosting some of my own programs that until recently would have needed a subscription. My programs will only be available to download from https://TheoryFreak.com.
-    If you discover any of my programs hosted else where, Please be advised to use extreme cation and not trust outside sources as they may contain malware. 
-    I will be hosting some great hacking tools, tutorials, including video & pdf tutorials. I will be hosting word tools and word list. There will be a chat room for hackers to communicate there knowledge.
-    Please, always be mindful of other members. Always treat one another like you would want to be treated. I created this website to serve as a safe haven for the hacker community.
-    This website shall serve as an online portal Of valuable information that shall be open to all hackers and hackers alike. I will try my best to implement a way to share content between one another.
-    If anyone, has any questions, comments, or concerns, please don't hesitate to email me at theoryfreak@yahoo.com My facebook page is https://facebook.com/TheoryFreak</p></div>
+    <div id="theoryfreak">DO NOT DELETE - THIS IS FOR THE JAVASCRIPT </div>
  
 
 
@@ -82,35 +37,11 @@ function Chat() {
   xhttp.open("GET", "https://theoryfreak.com/chatroom.html", true);
   xhttp.send();
 }
-  
-  function GoogleDorks() {
-  var xhttp = new XMLHttpRequest();
-  xhttp.onreadystatechange = function() {
-    if (this.readyState == 4 && this.status == 200) {
-      document.getElementById("theoryfreak").innerText =
-      this.responseText;
-    }
 
-  };
-  xhttp.open("GET", "https://raw.githubusercontent.com/theoryfreak/TXT/main/Google%20Dorks%202021", true);
-  xhttp.send();
-}
 
-    function CommonWords() {
-  var xhttp = new XMLHttpRequest();
-  xhttp.onreadystatechange = function() {
-    if (this.readyState == 4 && this.status == 200) {
-      document.getElementById("theoryfreak").innerText =
-      this.responseText;
-    }
-
-  };
-  xhttp.open("GET", "https://raw.githubusercontent.com/theoryfreak/TXT/main/Common%20Words%20List", true);
-  xhttp.send();
-}
 </script>
 
-<p style="color:red">TheoryFreak 2021</p>
+<p style="color:red">TheoryFreak Insights!</p>
 
 </body>
 </html>
