--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>TheoryFreak</title>
+<title>TheoryFreak Insights!</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  
+ <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+   <a href="javascript:void(0)" class="closebtn" onclick="GoogleDorks()">&times;</a>
+</div>
   
 <h1>Welcome, You!</h1>
  
@@ -15,10 +23,7 @@
   <p style="color:red"><h4> Stay Groovy Folks! We Are Under Construction! - We'll Be Back Very Soon! </p>
   
  
-<button type="button" onclick="/index.html"> Home </button>
-<button type="button" onclick="GoogleDorks()">TEST - Google Dorks</button>
 <button type="button" onclick="CommonWords()">TEST - Common Words List</button>
-  <p> </p>
   
     <div id="theoryfreak">DO NOT DELETE - THIS IS FOR THE JAVASCRIPT </div>
  
