--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
-   <a href="javascript:void(0)" class="closebtn" onclick="GoogleDorks()">&times;</a>
+   <a onclick="GoogleDorks()">&times;</a>
 </div>
   
 <h1>Welcome, You!</h1>
