--- a/index.html
+++ b/index.html
@@ -9,42 +9,18 @@
   
  <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-   <a onclick="GoogleDorks()">&times;</a>
 </div>
   
-<h1>Welcome, You!</h1>
  
- <p style="color:red">Anthony Sees You!</p>
+ <p style="color:red">Welcome to Theoryfreak Insights!</p>
   
   
-  <p style="color:red"><h4> Stay Groovy Folks! We Are Under Construction! - We'll Be Back Very Soon! </p>
+  <p style="color:red"><h4> We'll Be Back Very Soon! </p>
   
  
 <button type="button" onclick="CommonWords()">TEST - Common Words List</button>
   
     <div id="theoryfreak">DO NOT DELETE - THIS IS FOR THE JAVASCRIPT </div>
- 
-
-
-<script>
-function Chat() {
-  var xhttp = new XMLHttpRequest();
-  xhttp.onreadystatechange = function() {
-    if (this.readyState == 4 && this.status == 200) {
-      document.getElementById("theoryfreak").innerHTML =
-      this.responseText;
-    }
-
-  };
-  xhttp.open("GET", "https://theoryfreak.com/chatroom.html", true);
-  xhttp.send();
-}
-
-
-</script>
 
 <p style="color:red">TheoryFreak Insights!</p>
 
