--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
   
  <div class="topnav">
-  <a class="active" href="#home">Home</a>
+<a class="active" href="#home">Home</a>
+<a class="active" href="#home">Test</a>
+
 </div>
   
  
