--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   
  <div class="topnav">
-<a class="active" href="#home">Home</a>
+<a class="active" href="https://www.theoryfreak.com">Home</a>
 <a class="active" href="#home">Test</a>
 
 </div>
