--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 <body>
   
  <div class="topnav">
-<a class="active" href="https://www.theoryfreak.com">Home</a>
-<a class="active" href="#home">Test</a>
+<a class="active" href="https://www.theoryfreak.com">HOME</a>
+<a class="active" href="#home">SCIENCE</a>
+<a class="active" href="#home">MATH</a>
+<a class="active" href="#home">HISTORY</a>
+<a class="active" href="#home">CONSPIRACY</a>
+<a class="active" href="#home">CURRENCY</a>
+<a class="active" href="#home">NEWS</a>
+<a class="active" href="#home">MORE</a>
 
 </div>
   
