--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 <title>TheoryFreak Insights!</title>
-<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <center>
  <div class="topnav">
 <a class="active" href="https://www.theoryfreak.com">HOME</a>
 <a class="active" href="#home">SCIENCE</a>
@@ -17,16 +16,20 @@
 <a class="active" href="#home">MORE</a>
 
 </div>
+
+<p style="color:red">Welcome to Theoryfreak Insights!</p>
+
+<img src="https://ik.imagekit.io/ikmedia/women-dress-2.jpg" 
+     width="400" 
+     height="500" />
   
  
-<p style="color:red">Welcome to Theoryfreak Insights!</p>
-   
 <p style="color:red"><h4> We'll Be Back Very Soon! </p>
   
 <button type="button" onclick="CommonWords()">TEST - Common Words List</button>
  
 
 <p style="color:red">TheoryFreak Insights!</p>
-
+  </center>
 </body>
 </html>
