--- a/index.html
+++ b/index.html
@@ -5,23 +5,13 @@
 </head>
 <body>
   <center>
- <div class="topnav">
-<a class="active" href="https://www.theoryfreak.com">HOME</a>
-<a class="active" href="#home">SCIENCE</a>
-<a class="active" href="#home">MATH</a>
-<a class="active" href="#home">HISTORY</a>
-<a class="active" href="#home">CONSPIRACY</a>
-<a class="active" href="#home">CURRENCY</a>
-<a class="active" href="#home">NEWS</a>
-<a class="active" href="#home">MORE</a>
 
-</div>
+<a class="active" href="https://www.theoryfreak.com">HOME</a>
+
 
 <p style="color:red">Welcome to Theoryfreak Insights!</p>
 
-<img src="https://ik.imagekit.io/ikmedia/women-dress-2.jpg" 
-     width="400" 
-     height="500" />
+<img src="https://ik.imagekit.io/ikmedia/women-dress-2.jpg" width="640" height="320" />
   
  
 <p style="color:red"><h4> We'll Be Back Very Soon! </p>
