--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <p style="color:red">Welcome to Theoryfreak Insights!</p>
 
-<img src="https://ik.imagekit.io/ikmedia/women-dress-2.jpg" width="640" height="320" />
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/Eye_of_Horus.svg/640px-Eye_of_Horus.svg.png" width="640" height="320" />
   
  
 <p style="color:red"><h4> We'll Be Back Very Soon! </p>
