--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
 <body>
   <center>
 
-<a class="active" href="https://www.theoryfreak.com">HOME</a>
-
 
 <p style="color:red">Welcome to Theoryfreak Insights!</p>
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/Eye_of_Horus.svg/640px-Eye_of_Horus.svg.png" width="640" height="320" />
   
- 
 <p style="color:red"><h4> We'll Be Back Very Soon! </p>
   
+     <nav>
+  <a href="/html/">HTML</a> |
+  <a href="/css/">CSS</a> |
+  <a href="/js/">JavaScript</a> |
+  <a href="/python/">Python</a>
+</nav>
+    
+    
 <button type="button" onclick="CommonWords()">TEST - Common Words List</button>
  
 
