--- a/index.html
+++ b/index.html
@@ -11,19 +11,17 @@
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/Eye_of_Horus.svg/640px-Eye_of_Horus.svg.png" width="640" height="320" />
   
-<p style="color:red"><h4> We'll Be Back Very Soon! </p>
-  
-     <nav>
+ <p><nav>
   <a href="/html/">HTML</a> |
   <a href="/css/">CSS</a> |
   <a href="/js/">JavaScript</a> |
   <a href="/python/">Python</a>
-</nav>
+    </nav></p>
     
-    
+<p style="color:red"><h4> We'll Be Back Very Soon! </p>
+
 <button type="button" onclick="CommonWords()">TEST - Common Words List</button>
  
-
 <p style="color:red">TheoryFreak Insights!</p>
   </center>
 </body>
