--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     </nav></p>
     
 <p style="color:red"><h4> We'll Be Back Very Soon! </p>
-
-<button type="button" onclick="CommonWords()">TEST - Common Words List</button>
  
+<p><nav>
+<button type="button" onclick="CommonWords()">TEST 1</button>
+  <button type="button" onclick="CommonWords()">TEST 2</button>
+</nav></p>
+  
 <p style="color:red">TheoryFreak Insights!</p>
   </center>
 </body>
