--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/Eye_of_Horus.svg/640px-Eye_of_Horus.svg.png" width="640" height="320" />
   
  <p><nav>
-  <a href="/html/">HTML</a> |
-  <a href="/css/">CSS</a> |
-  <a href="/js/">JavaScript</a> |
-  <a href="/python/">Python</a>
+  <a href="/Theory/">Theories</a> |
+  <a href="/Facts/">Facts</a> |
+  <a href="/History/">History</a> |
+  <a href="/Science/">Science</a>
     </nav></p>
     
 <p style="color:red"><h4> We'll Be Back Very Soon! </p>
