--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
 <p><nav>
 <button type="button" onclick="CommonWords()">TEST 1</button>
   <button type="button" onclick="CommonWords()">TEST 2</button>
-</nav></p>
+  <button type="button" onclick="CommonWords()">TEST 3</button>
+</nav>
+  <nav>
+<button type="button" onclick="CommonWords()">TEST 1</button>
+  <button type="button" onclick="CommonWords()">TEST 2</button>
+  <button type="button" onclick="CommonWords()">TEST 3</button>
+</nav>
+  </p>
   
 <p style="color:red">TheoryFreak Insights!</p>
   </center>
