--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>TheoryFreak Insights!</title>
+<title>Custom T-Shirts, Decals & More By Carli Ottolini</title>
 </head>
 <body>
   <center>
 
 
-<p style="color:red">Welcome to Theoryfreak Insights!</p>
+<p style="color:red">Custom T-Shirts, Decals & More By Carli Ottolini</p>
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/Eye_of_Horus.svg/640px-Eye_of_Horus.svg.png" width="640" height="320" />
   
@@ -30,7 +30,7 @@
     </p>
     
 <p style="color:red"><h4> We'll Be Back Very Soon! </p>
- 
+
 <p><nav>
 <button type="button" onclick="CommonWords()">TEST 1</button>
   <button type="button" onclick="CommonWords()">TEST 2</button>
