--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Custom T-Shirts, Decals & More By Carli Ottolini</title>
+<title>Joseph Anthony Webb II</title>
 </head>
 <body>
   <center>
 
 
-<p style="color:red">Custom T-Shirts, Decals & More By Carli Ottolini</p>
+<p style="color:red">Joseph Anthony Webb II</p>
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/Eye_of_Horus.svg/640px-Eye_of_Horus.svg.png" width="640" height="320" />
   
