--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Online T-Shirt Designer, Custom T-Shirts & Apparel</title>
+<title>TheoryFreak Insights - Hacking The Internet, Hack Forums, Hackers Chat, Downloads & More! </title>
 </head>
 <body>
   <center>
@@ -20,7 +20,7 @@
     </nav>
     </p>
     
-<p style="color:red"><h4> We'll Be Back Very Soon! </p>
+<p style="color:red"><h4></p>
 
 <p style="color:red">TheoryFreak Insights!</p>
   </center>
