--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>TheoryFreak Insights - Hacking The Internet, Hack Forums, Hackers Chat, Downloads & More! </title>
+<title>TheoryFreak Insights - Hack Forums, Hackers Chat, Bug Bounties, Downloads & More!</title>
 </head>
 <body>
   <center>
