--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <p style="color:red"></p>
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/Eye_of_Horus.svg/640px-Eye_of_Horus.svg.png" width="640" height="320" />
+<img src="https://images.idgesg.net/images/article/2020/07/hacker_hacking_laptop_security_threat_attack_by_undefined_undefined_gettyimages-962366210_2400x1600_cio_cw-100852252-large.jpg" width="640" height="320" />
   
  <p>
     <nav>
