--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>TheoryFreak Insights - Hack Forums, Hackers Chat, Bug Bounties, Downloads & More!</title>
+<title>TheoryFreak Insights!</title>
 </head>
 <body>
   <center>
 
 
-<p style="color:red"></p>
+<p style="color:red">TheoryFreak Insights - Hack Forums, Hackers Chat, Bug Bounties, Downloads & More!</p>
 
 <img src="https://images.idgesg.net/images/article/2020/07/hacker_hacking_laptop_security_threat_attack_by_undefined_undefined_gettyimages-962366210_2400x1600_cio_cw-100852252-large.jpg" width="640" height="320" />
   
