--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>TheoryFreak Insights!</title>
+<title>Southern Illinois Marketplace, Custom T-Shirts, Decals & More!</title>
 </head>
 <body>
   <center>
 
 
-<p style="color:red"><h2>TheoryFreak Insights - Hack Forums, Hackers Chat, Bug Bounties, Downloads & More!</h2></p>
+<p style="color:red"><h2>Southern Illinois Marketplace, Custom T-Shirts, Decals & More!</h2></p>
 
 <img src="https://images.idgesg.net/images/article/2020/07/hacker_hacking_laptop_security_threat_attack_by_undefined_undefined_gettyimages-962366210_2400x1600_cio_cw-100852252-large.jpg" width="640" height="320" />
   
@@ -22,7 +22,7 @@
     
 <p style="color:red"><h4></p>
 
-<p style="color:red">TheoryFreak Insights!</p>
+<p style="color:red">Southern Illinois Marketplace! 2023</p>
   </center>
 </body>
 </html>
