--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
   
  <p>
     <nav>
-  <a href="/Theory/">Theories</a> |
-  <a href="/Facts/">Facts</a> |
-  <a href="/History/">History</a> |
-  <a href="/Science/">Science</a>
+  <a href="/Theory/">HOME</a> |
+  <a href="/Facts/">MARKETPLACE</a> |
+  <a href="/History/">ABOUT</a> |
+  <a href="/Science/">CONTACT US!</a>
+  <a href="/Science/">More...</a>
     </nav>
     </p>
     
