--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <center>
 
 
-<p style="color:red">TheoryFreak Insights - Hacker News, Hacking Tools, Bug Bounty List, Tutorials & More!</p>
+<h2><p style="color:red">TheoryFreak Insights - Hacker News, Hacking Tools, Bug Bounty List, Tutorials & More!</p></h2>
 
 <img src="https://i.imgur.com/08sCnAC.jpg" width="640" height="320" />
   
