--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
 <p style="color:red"><h4></p>
 
-<p style="color:red">Southern Illinois Marketplace! 2023</p>
+<p style="color:white">Southern Illinois Marketplace! 2023</p>
   </center>
 </body>
 </html>
