--- a/index.html
+++ b/index.html
@@ -9,21 +9,12 @@
 
 <h2><p style="color:red">TheoryFreak Insights - Hacker News, Hacking Tools, Bug Bounty List, Tutorials & More!</p></h2>
 
-<img src="https://i.imgur.com/08sCnAC.jpg" width="640" height="320" />
-  
- <p>
-    <nav>
-  <a href="/Theory/">HOME</a>
-  <a href="/Facts/">MARKETPLACE</a>
-  <a href="/History/">ABOUT</a>
-  <a href="/Science/">CONTACT US!</a>
-  <a href="/Science/">More...</a>
-    </nav>
-    </p>
-    
-<p style="color:red"><h4></p>
-
-<p style="color:white">Southern Illinois Marketplace! 2023</p>
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_s-xclick" />
+  <input type="hidden" name="hosted_button_id" value="8VNSX2S9RXXSS" />
+  <input type="hidden" name="currency_code" value="USD" />
+  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Buy Now" />
+</form>
   </center>
 </body>
 </html>
