--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <title>TheoryFreak Insights!</title>
 </head>
-<body style="background-color:#000000;">
+
+<body style="width: 100%; style="background-color:#000000; max-width: 1024px;">
+  
   <center>
 
 
