--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>TheoryFreak Insights!</title>
 </head>
   <center>
-<body style="width: 50%; style="background-color:#000000; max-width: 1080px;">
+<body style="width: 50%; style="background-color:#000000; max-width: 1080px; center;">
 
 <h2><p style="color:red">TheoryFreak Insights - Hacker News, Hacking Tools, Bug Bounty List, Tutorials & More!</p></h2>
 
