--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <title>TheoryFreak Insights!</title>
 </head>
+  <body>
   <center>
-<body style="width: 50%; style="background-color:#000000; max-width: 1080px; center;">
 
 <h2><p style="color:red">TheoryFreak Insights - Hacker News, Hacking Tools, Bug Bounty List, Tutorials & More!</p></h2>
 
@@ -15,5 +15,6 @@
   <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Buy Now" />
 </form>
   </center>
-</body>
+  </body>
+
 </html>
