--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>TheoryFreak Insights!</title>
 </head>
-  <body>
+  <body width=50%;>
   <center>
 
 <h2><p style="color:red">TheoryFreak Insights - Hacker News, Hacking Tools, Bug Bounty List, Tutorials & More!</p></h2>
