--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
 <title>TheoryFreak Insights!</title>
 </head>
-  <body width=50%;>
-  <center>
+  <body><center>
 
-<h2><p style="color:red">TheoryFreak Insights - Hacker News, Hacking Tools, Bug Bounty List, Tutorials & More!</p></h2>
+<p style="color:red" width=50;>TheoryFreak Insights - Hacker News, Hacking Tools, Bug Bounty List, Tutorials & More!</p>
 
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
   <input type="hidden" name="cmd" value="_s-xclick" />
@@ -14,7 +13,6 @@
   <input type="hidden" name="currency_code" value="USD" />
   <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Buy Now" />
 </form>
-  </center>
-  </body>
+  </center></body>
 
 </html>
