--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>TheoryFreak Insights!</title>
-</head>
-  <body><center>
 
-<p style="color:red" width=50;>TheoryFreak Insights - Hacker News, Hacking Tools, Bug Bounty List, Tutorials & More!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TheoryFreak</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>LoL :P</h1>
+    </header>
+
 
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
   <input type="hidden" name="cmd" value="_s-xclick" />
@@ -13,6 +19,19 @@
   <input type="hidden" name="currency_code" value="USD" />
   <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Buy Now" />
 </form>
-  </center></body>
 
+  
+    <main>
+        <section>
+            <h2>Welcome to our website</h2>
+
+    </main>
+    <footer>
+        <p>&copy; 2023 Your Company</p>
+    </footer>
+</body>
 </html>
+
+
+
+
