--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <center>
     <header>
         <h1>LoL :P</h1>
     </header>
@@ -29,6 +30,7 @@
     <footer>
         <p>&copy; 2023 Your Company</p>
     </footer>
+    </center>
 </body>
 </html>
 
