--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     </main>
     <footer>
-        <p>&copy; 2023 Your Company</p>
+        <p>&copy; <button></button></p>
     </footer>
     </center>
 </body>
