--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   
     <main>
         <section>
-            <h2>Welcome to our website</h2>
+            <h2>TheoryFreak - Hacking, Bug Bounties & More!</h2>
 
     </main>
     <footer>
-        <p>&copy; <button></button></p>
+<link>https://www.3l1t3h4ck3rz.:8118///;@google.com:433///;</link>
     </footer>
     </center>
 </body>
