--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <center>
     <header>
-        <h1>LoL :P</h1>
+        <h1>TheoryFreak - Hacking, Bug Bounties & More!</h1>
     </header>
 
 
