--- a/index.html
+++ b/index.html
@@ -14,12 +14,32 @@
     </header>
 
 
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-  <input type="hidden" name="cmd" value="_s-xclick" />
-  <input type="hidden" name="hosted_button_id" value="8VNSX2S9RXXSS" />
-  <input type="hidden" name="currency_code" value="USD" />
-  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Buy Now" />
-</form>
+<!DOCTYPE html>
+<html>
+<body>
+
+
+
+<button type="button" onclick="loadDoc()">Change Content</button>
+
+
+<p id="demo">olive juice!</p>
+<script>
+
+
+function loadDoc() {
+  const xhttp = new XMLHttpRequest();
+  xhttp.onload = function() {
+    document.getElementById("demo").innerHTML =
+    this.responseText;
+  }
+  xhttp.open("GET", "https://google.com");
+  xhttp.send();
+}
+</script>
+
+</body>
+</html>
 
   
     <main>
