--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function loadDoc() {
     document.getElementById("demo").innerHTML =
     this.responseText;
   }
-  xhttp.open("GET", "/edit/main/index.html");
+  xhttp.open("GET", "/edit/main/");
   xhttp.send();
 }
 </script>
