--- a/index.html
+++ b/index.html
@@ -1,56 +1,14 @@
-
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TheoryFreak</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <center>
-    <header>
-        <h1>TheoryFreak - Hacking, Bug Bounties & More!</h1>
-    </header>
-
-
-<!DOCTYPE html>
 <html>
 <body>
-
-
-
-<button type="button" onclick="loadDoc()">Change Content</button>
-
-
-<p id="demo">olive juice!</p>
-<script>
-
-
-function loadDoc() {
-  const xhttp = new XMLHttpRequest();
-  xhttp.onload = function() {
-    document.getElementById("demo").innerHTML =
-    this.responseText;
-  }
-  xhttp.open("GET", "/edit/main/");
-  xhttp.send();
-}
-</script>
-
-</body>
-</html>
-
-  
-    <main>
-        <section>
             <h2>TheoryFreak - Hacking, Bug Bounties & More!</h2>
 
-    </main>
-    <footer>
-
-    </footer>
-    </center>
+     I am currently working on content. Please check back soon...
 </body>
 </html>
 
