--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TheoryFreak</title>
-    <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>TheoryFreak</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <html>
 <body>
-            <h2>TheoryFreak - Hacking, Bug Bounties & More!</h2>
-
-     I am currently working on content. Please check back soon...
+<h3> TheoryFreak - Hacking, Bug Bounties & More! </h3>
+<center>
+I am currently working on content. Please check back soon...
+</center>
 </body>
 </html>
 
