--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
 <body>
 <center>
 <h3> TheoryFreak - Hacking, Bug Bounties & More! </h3>
-I am currently working on content. Please check back soon...
+<form
+  action="https://formspree.io/f/mayrjvwn"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
 </center>
 </body>
 </html>
