--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 <body>
 <center>
-<h3> TheoryFreak - Hacking, Bug Bounties & More! </h3>
+<h3> TheoryFreak - Please Your Offer Below. </h3>
 <form
   action="https://formspree.io/f/mayrjvwn"
   method="POST"
@@ -17,7 +17,7 @@
     <input type="email" name="email">
   </label>
   <label>
-    Your message:
+    Price Offering? :
     <textarea name="message"></textarea>
   </label>
   <!-- your other form fields go here -->
