--- a/index.html
+++ b/index.html
@@ -13,48 +13,11 @@
 </style>
 </head>
 <body>
-<canvas id="gameCanvas" width="400" height="400"></canvas>
+<h3>TheoryFreak 2024!</h3>
 
-<script>
-    const canvas = document.getElementById("gameCanvas");
-    const ctx = canvas.getContext("2d");
+<p>Who knows??</p>
 
-    const blockSize = 20;
-    const width = canvas.width;
-    const height = canvas.height;
+<marquee>Check Back Soon!</marquee>
 
-    let snake = [{x: 10, y: 10}];
-    let food = getRandomPosition();
-
-    let dx = 0;
-    let dy = 0;
-
-    function getRandomPosition() {
-        return {
-            x: Math.floor(Math.random() * (width / blockSize)) * blockSize,
-            y: Math.floor(Math.random() * (height / blockSize)) * blockSize
-        };
-    }
-
-    function draw() {
-        ctx.clearRect(0, 0, width, height);
-
-        // Draw food
-        ctx.fillStyle = "red";
-        ctx.fillRect(food.x, food.y, blockSize, blockSize);
-
-        // Draw snake
-        ctx.fillStyle = "green";
-        snake.forEach(segment => ctx.fillRect(segment.x, segment.y, blockSize, blockSize));
-
-        // Draw "Game Over" if game is over
-        if (isGameOver()) {
-            ctx.fillStyle = "black";
-            ctx.font = "30px Arial";
-            ctx.fillText("Game Over", 130, 200);
-        }
-    }
-
-    function update() {
-        const head = {x: snake[0].x + dx, y: snake[0].y + dy};
-
+    Contact, pulse@msn.com
+</body>
