--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Snake Game</title>
+<title>Anthony W. 🙈 </title>
 <style>
     canvas {
         background-color: #eee;
@@ -13,9 +13,9 @@
 </style>
 </head>
 <body>
-<h3>TheoryFreak 2024!</h3>
+<h2><marquee>Welcome to www.RedWhings.com 2024!</marquee></h2>
 
-<p>Who knows??</p>
+<p><h3>Published By: TheoryFreak © 2024</h2></p>
 
 <marquee>Check Back Soon!</marquee>
 
