--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 </style>
 </head>
 <body>
+<center>
 <h2><marquee>Welcome to www.RedWhings.com 2024!</marquee></h2>
 
 <p><h3>Published By: TheoryFreak © 2024</h2></p>
 
-<marquee>Check Back Soon!</marquee>
+<p>Check Back Soon!
 
-    Contact, pulse@msn.com
+    Contact, pulse@msn.com</p>
+   </center> 
 </body>
