--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Anthony W. 🙈 </title>
+<title>Anthony W. 2K24 </title>
 <style>
     canvas {
         background-color: #eee;
@@ -18,8 +18,10 @@
 
 <p><h3>Published By: TheoryFreak © 2024</h2></p>
 
-<p>Check Back Soon!
-
-    Contact, pulse@msn.com</p>
+<p> Coming soon! Crypto Tokens By TheoryFreak. 🙂 </p>
+<p>E-Gift Vouchers upto 50% off!</p>
+<p>Buy, Sell, Exchange, Please Check Back Soon 🙂</p>
+    
+<p> Contact, pulse@msn.com</p>
    </center> 
 </body>
