--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
 </head>
 <body>
 <center>
-<h2><marquee>Welcome to www.RedWhings.com 2024!</marquee></h2>
 
 <p><h3>Published By: TheoryFreak © 2024</h2></p>
 
 <p> Coming soon! Crypto Tokens By TheoryFreak. 🙂 </p>
 <p>E-Gift Vouchers upto 50% off!</p>
 <p>Buy, Sell, Exchange, Please Check Back Soon 🙂</p>
+
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_s-xclick" />
+  <input type="hidden" name="hosted_button_id" value="S6HNAE8Y3Y2Z6" />
+  <input type="hidden" name="currency_code" value="USD" />
+  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Buy Now" />
+</form>
+
     
 <p> Contact, pulse@msn.com</p>
    </center> 
