--- a/index.html
+++ b/index.html
@@ -17,9 +17,23 @@
 
 <p><h3>Published By: TheoryFreak © 2024</h2></p>
 
-<p> Coming soon! Crypto Tokens By TheoryFreak. 🙂 </p>
-<p>E-Gift Vouchers upto 50% off!</p>
-<p>Buy, Sell, Exchange, Please Check Back Soon 🙂</p>
+<p> Please use the Buy Now button below to confirm your purchase.
+</p>
+
+    <p> Include Your Phone Number and Email address To Where You Would Like Your Vouchers To Arrive!
+</p>
+
+    <p> Contact 618-200-2787 to confirm availability! 
+</p>
+
+    <p> You May Experience Longer Than Expected Waiting Times And May Not Recieve Your Vouchers For Up To 24 Hours!
+</p>
+
+    <p>Always Call Or Txt To Check Availability!
+</p>
+
+    <p> This is a Private Program, Do Not Use This Service If Your Not Part Of This Private Program!
+</p>
 
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
   <input type="hidden" name="cmd" value="_s-xclick" />
