--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Anthony W. 2K24 </title>
 <style>
     canvas {
-        background-color: #eee;
+        background-color: #90EE90;
         display: block;
         margin: 0 auto;
     }
