--- a/index.html
+++ b/index.html
@@ -15,34 +15,8 @@
 <body>
 <center>
 
-<p><h3>Published By: TheoryFreak © 2024</h2></p>
-
-<p> Please use the Buy Now button below to confirm your purchase.
-</p>
-
-    <p> Include Your Phone Number and Email address To Where You Would Like Your Vouchers To Arrive!
-</p>
-
-    <p> Contact 618-200-2787 to confirm availability! 
-</p>
-
-    <p> You May Experience Longer Than Expected Waiting Times And May Not Recieve Your Vouchers For Up To 24 Hours!
-</p>
-
-    <p>Always Call Or Txt To Check Availability!
-</p>
-
-    <p> This is a Private Program, Do Not Use This Service If Your Not Part Of This Private Program!
-</p>
-
-    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-  <input type="hidden" name="cmd" value="_s-xclick" />
-  <input type="hidden" name="hosted_button_id" value="S6HNAE8Y3Y2Z6" />
-  <input type="hidden" name="currency_code" value="USD" />
-  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Buy Now" />
-</form>
-
-    
+<p><h3>[ TheoryFreak ]</h2></p>  
+<p></p>
 <p> Contact, pulse@msn.com</p>
    </center> 
 </body>
