--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <center>
 
 <p><h3>[ TheoryFreak ]</h2></p>  
-<p></p>
+<p> <marquee>Anthony Was Here!!!</marquee></p>
 <p> Contact, pulse@msn.com</p>
    </center> 
 </body>
